--- a/projects/index.html
+++ b/projects/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Test Page</title>
+  <style>
+    body {
+      background-color: white;
+      color: black;
+      font-family: "Lucida Console", Monaco, monospace;
+      margin: 0;
+      padding: 30px;
+    }
+    h1 {
+      font-size: 3em;
+    }
+    a {
+      font-size: 1.2em;
+      color: black;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to my test site</h1>
+  <p>This is just a simple test homepage to make sure links work.</p>
+
+  <nav>
+    <a href="projects/">Go to Projects Page</a>
+  </nav>
+</body>
+</html>
 
