--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
     <h1>Justin Smyth</h1>
     <h2>Industrial & Automation Engineer</h2>
     <nav>
-      <a href="experience.html">Experience</a>
-      <a href="projects.html">Projects</a>
-      <a href="education.html">Education</a>
-      <a href="about.html">About</a>
+      <a href="experience/">Experience</a>
+      <a href="projects/">Projects</a>
+      <a href="education/">Education</a>
+      <a href="about/">About</a>
     </nav>
   </header>
 </body>
 </html>
+
