--- a/experience/index.html
+++ b/experience/index.html
@@ -3,35 +3,99 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test Page</title>
+  <title>Experience - Justin Smyth</title>
   <style>
     body {
       background-color: white;
       color: black;
       font-family: "Lucida Console", Monaco, monospace;
       margin: 0;
-      padding: 30px;
+      display: flex;
+      justify-content: center;
+      padding: 40px 20px;
     }
-    h1 {
-      font-size: 3em;
+    .container {
+      max-width: 800px;   /* keeps content from stretching too wide */
+      width: 100%;
+      line-height: 1.5em;
+    }
+    h1, h2, h3 {
+      margin-top: 1.2em;
+      margin-bottom: 0.6em;
+    }
+    h1 { font-size: 2em; text-align: center; }
+    h2 { font-size: 1.5em; }
+    h3 { font-size: 1.2em; }
+    ul {
+      margin-left: 20px;
     }
     a {
-      font-size: 1.2em;
       color: black;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
+    .back {
+      display: block;
+      margin-top: 40px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
-  <h1>Welcome to my test site</h1>
-  <p>This is just a simple test homepage to make sure links work.</p>
+  <div class="container">
+    <h1>Experience</h1>
 
-  <nav>
-    <a href="projects/">Go to Projects Page</a>
-  </nav>
+    <p style="text-align:center;">
+      <strong>Justin Smyth</strong><br>
+      101 Topaz Dr. Gilbertsville, PA 19525 | (610)–772–0948 | 
+      <a href="mailto:justinsmyth423@gmail.com">justinsmyth423@gmail.com</a> | smythjustin
+    </p>
+
+    <p>Experienced automation and industrial engineer with a proven record of improving performance in large scale production and fulfillment facilities. Skilled in PLC based controls, automation system integration, vendor equipment validation, and time critical troubleshooting. Background includes commissioning and optimizing complex systems to increase throughput, reduce downtime, and improve reliability in manufacturing environments. Adept at collaborating across engineering, operations, and supplier teams to implement design improvements, ensure compliance with safety standards, and drive long term efficiency, throughput gains, as well as process improvements.</p>
+
+    <h2>Engineering Work Experience</h2>
+
+    <h3>Automation/ Industrial Engineer | Multi-Dimensional Integration (MDI) | Aug 2022 – Present</h3>
+    <ul>
+      <li>Led automation improvement initiatives across 50+ Amazon fulfillment centers, focusing on controls reliability, throughput optimization, and vendor accountability.</li>
+      <li>Delivered measurable results: 36.5% jam reduction, 43.1% DPMO decrease, 26.8% output increase via PLC logic modifications and process improvements.</li>
+      <li>Drove design feedback loops to OEM vendors, identifying 700+ corrective actions at one site, with 400+ integrated into future launches.</li>
+      <li>Reviewed and optimized supplier systems for compliance with safety and integration standards (Allen-Bradley Studio 5000, Ethernet/IP, Profibus).</li>
+      <li>Executed commissioning and validation of vendor supplied systems, collaborating across teams to meet aggressive timelines.</li>
+      <li>Developed internal automation tool to process 2,000+ troubleshooting reports, standardizing vendor accountability.</li>
+      <li>Provided critical on-site and remote support under high-pressure conditions to ensure uptime and minimize downtime.</li>
+    </ul>
+
+    <h3>Controls Engineering Intern | Multi-Dimensional Integration (MDI) | Fall 2021</h3>
+    <ul>
+      <li>Commissioned several Amazon sites including IXD & 640k Sortable centers.</li>
+      <li>Programmed with Studio 5000 to ensure proper communication and device functionality.</li>
+      <li>Troubleshot ASI Safety, Ethernet, and OEM equipment systems.</li>
+      <li>Commissioned multiple control areas start-to-finish with timely turnover to customer.</li>
+    </ul>
+
+    <h3>Engineering Intern | New Standard Corporation (Spring 2021) & UKM Transit Products (Summer 2020)</h3>
+    <ul>
+      <li>Designed SolidWorks models and production drawings from legacy hand-drawings and customer STP files.</li>
+      <li>Created DXFs for laser cutting and ensured products met specifications.</li>
+      <li>Performed research testing hardware performance in customer parts.</li>
+      <li>Collaborated with engineering team to design manufacturable parts, including tolerances, finishes, and paint specs.</li>
+      <li>Fulfilled engineering change orders (ECO) to revise drawings and associated documents.</li>
+    </ul>
+
+    <h2>Education</h2>
+    <p><strong>Bachelor of Science: Mechanical Engineering</strong><br>
+    York College of Pennsylvania, York, PA — Aug 2018 – Aug 2022</p>
+
+    <h2>Engineering Skills and Coursework</h2>
+    <p><strong>Languages & Software:</strong> Studio 5000, ASIMON, Siemens TIA Portal, SolidWorks, MATLAB, Microsoft Office</p>
+    <p><strong>Coursework:</strong> Heat Transfer, Dynamics, Machine Design, Fluid Mechanics, Dynamic Systems Modeling/Analysis, Thermodynamics, Strength of Materials, Mechatronics, Physics (Mechanics, Electricity & Magnetism), Formula SAE</p>
+
+    <a class="back" href="index.html">← Back to Home</a>
+  </div>
 </body>
 </html>
+
 
