--- a/experience/index.html
+++ b/experience/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Experience - Justin Smyth</title>
+  <title>Experience</title>
   <style>
     body {
       background-color: white;
@@ -15,7 +15,7 @@
       padding: 40px 20px;
     }
     .container {
-      max-width: 800px;   /* keeps content from stretching too wide */
+      max-width: 1000px;   /* keeps content from stretching too wide */
       width: 100%;
       line-height: 1.5em;
     }
@@ -46,12 +46,6 @@
 <body>
   <div class="container">
     <h1>Experience</h1>
-
-    <p style="text-align:center;">
-      <strong>Justin Smyth</strong><br>
-      101 Topaz Dr. Gilbertsville, PA 19525 | (610)–772–0948 | 
-      <a href="mailto:justinsmyth423@gmail.com">justinsmyth423@gmail.com</a> | smythjustin
-    </p>
 
     <p>Experienced automation and industrial engineer with a proven record of improving performance in large scale production and fulfillment facilities. Skilled in PLC based controls, automation system integration, vendor equipment validation, and time critical troubleshooting. Background includes commissioning and optimizing complex systems to increase throughput, reduce downtime, and improve reliability in manufacturing environments. Adept at collaborating across engineering, operations, and supplier teams to implement design improvements, ensure compliance with safety standards, and drive long term efficiency, throughput gains, as well as process improvements.</p>
 
