--- a/experience/index.html
+++ b/experience/index.html
@@ -87,7 +87,7 @@
     <p><strong>Languages & Software:</strong> Studio 5000, ASIMON, Siemens TIA Portal, SolidWorks, MATLAB, Microsoft Office</p>
     <p><strong>Coursework:</strong> Heat Transfer, Dynamics, Machine Design, Fluid Mechanics, Dynamic Systems Modeling/Analysis, Thermodynamics, Strength of Materials, Mechatronics, Physics (Mechanics, Electricity & Magnetism), Formula SAE</p>
 
-    <a class="back" href="index.html">← Back to Home</a>
+    <a class="back" href="/">← Back to Home</a>
   </div>
 </body>
 </html>
