--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
     <nav>
       <a href="experience/">Experience</a>
       <a href="projects/">Projects</a>
+      <a href="Excellence/">Examples of Excellence</a>
       <a href="education/">Education</a>
       <a href="about/">About</a>
     </nav>
   </div>
 </body>
 </html>
+
