--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       margin: 0;
       padding: 20px;
       display: flex;
+      flex-direction: column; /* column layout */
       justify-content: center;
       align-items: center;
-      min-height: 50vh; /* makes it vertically centered */
+      min-height: 100vh; /* full screen height */
       text-align: center;
     }
     .container {
@@ -22,6 +23,8 @@
       flex-direction: column;
       align-items: center;
       gap: 20px;
+      flex: 1; /* take available space */
+      justify-content: center;
     }
     h1 {
       font-size: 3.5em;
@@ -42,6 +45,10 @@
     }
     nav a:hover {
       text-decoration: underline;
+    }
+    .age-counter {
+      font-size: 0.9em;
+      margin-top: auto; /* push to bottom */
     }
   </style>
 </head>
@@ -85,6 +92,3 @@
   </script>
 </body>
 </html>
-
-
-
