--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
   <div class="container">
     <h1>Justin Smyth</h1>
-    <h2>Industrial & Automation Engineer</h2>
+    <h2>Engineer</h2>
     <nav>
       <a href="experience/">Experience</a>
       <a href="projects/">Projects</a>
@@ -92,6 +92,7 @@
   </script>
 </body>
 </html>
+
 
 
 
