--- a/experience/index.html
+++ b/experience/index.html
@@ -15,7 +15,7 @@
       padding: 40px 20px;
     }
     .container {
-      max-width: 1000px;   /* keeps content from stretching too wide */
+      max-width: 1000px;
       width: 100%;
       line-height: 1.5em;
     }
@@ -47,36 +47,44 @@
   <div class="container">
     <h1>Experience</h1>
 
-    <p>Experienced automation and industrial engineer with a proven record of improving performance in large scale production and fulfillment facilities. Skilled in PLC based controls, automation system integration, vendor equipment validation, and time critical troubleshooting. Background includes commissioning and optimizing complex systems to increase throughput, reduce downtime, and improve reliability in manufacturing environments. Adept at collaborating across engineering, operations, and supplier teams to implement design improvements, ensure compliance with safety standards, and drive long term efficiency, throughput gains, as well as process improvements.</p>
+    <p>Exceptional problem solver with a proven track record of resolving critical issues at some of the world’s largest automated material handling facilities, including over 40 Amazon sites. Skilled in diagnosing and resolving controls, networking, and mechanical issues for high impact events. Experienced in material handling system optimization, PLC based controls and commissioning support. Adept at collaborating with cross functional teams to deliver measurable throughput gains, reduced downtime, and long term system improvements.</p>
 
     <h2>Engineering Work Experience</h2>
 
-    <h3>Automation/ Industrial Engineer | Multi-Dimensional Integration (MDI) | Aug 2022 – Present</h3>
+    <h3>Automation & Controls Engineer | Multi-Dimensional Integration (MDI) | August 2022 – Present</h3>
     <ul>
-      <li>Led automation improvement initiatives across 50+ Amazon fulfillment centers, focusing on controls reliability, throughput optimization, and vendor accountability.</li>
-      <li>Delivered measurable results: 36.5% jam reduction, 43.1% DPMO decrease, 26.8% output increase via PLC logic modifications and process improvements.</li>
-      <li>Drove design feedback loops to OEM vendors, identifying 700+ corrective actions at one site, with 400+ integrated into future launches.</li>
-      <li>Reviewed and optimized supplier systems for compliance with safety and integration standards (Allen-Bradley Studio 5000, Ethernet/IP, Profibus).</li>
-      <li>Executed commissioning and validation of vendor supplied systems, collaborating across teams to meet aggressive timelines.</li>
-      <li>Developed internal automation tool to process 2,000+ troubleshooting reports, standardizing vendor accountability.</li>
-      <li>Provided critical on-site and remote support under high-pressure conditions to ensure uptime and minimize downtime.</li>
+      <li>Led Amazon fulfillment center optimization program on behalf of a global material handling OEM, improving throughput, lowering recirculation, reducing jams, increasing MHE uptime across 40+ Amazon sites nationwide.</li>
+      <li>Drove performance gains across 10+ Amazon FCs, including a project that achieved 36.5% jam reduction and 43.1% DPMO decrease while increasing building volume by 26.8%, through PLC ladder logic optimization.</li>
+      <li>Identified and implemented 700+ corrective actions at an Amazon FC, with 400+ integrated into future Amazon site designs to prevent repeat issues, which helped standardize best practices across the network.</li>
+      <li>Worked directly with Amazon OE and RME teams to rapidly diagnose and resolve critical issues using Allen Bradley PLC (Studio 5000), Ethernet/IP, Profibus, and other industrial networks; leveraged a strong understanding of ladder logic to create on the spot solutions in high pressure environments.</li>
+      <li>Supported commissioning through go live and post launch validation at 8+ Amazon FCs, leading on site efforts to validate and ensure a smooth transition to Amazon Operations.</li>
+      <li>Coordinated peak season readiness efforts, partnering with engineering, operations, and Amazon teams to drive corrective actions and sustain peak MHE performance.</li>
+      <li>Ensured all implemented solutions maintained compliance with Amazon’s safety standards and specifications.</li>
+      <li>Designed and implemented an internal knowledge automation tool that processed 2,000+ historical troubleshooting reports, enabling engineers to instantly retrieve solutions for recurring automation issues.</li>
+      <li>Provided after hours remote support to assist on site teams in diagnosing and resolving critical issues.</li>
     </ul>
 
-    <h3>Controls Engineering Intern | Multi-Dimensional Integration (MDI) | Fall 2021</h3>
+    <h3>Controls Engineering Intern | Multi-Dimensional Integration (MDI) | Shrewsbury, PA | Fall 2021</h3>
     <ul>
-      <li>Commissioned several Amazon sites including IXD & 640k Sortable centers.</li>
-      <li>Programmed with Studio 5000 to ensure proper communication and device functionality.</li>
-      <li>Troubleshot ASI Safety, Ethernet, and OEM equipment systems.</li>
-      <li>Commissioned multiple control areas start-to-finish with timely turnover to customer.</li>
+      <li>Commissioned customer sites including Amazon 2 FCs and 1 IXD, supporting PLC I/O checkout.</li>
+      <li>Learned to configure and validate PLC logic, safety zones, and device interlocks using Studio 5000 and ASIMON.</li>
+      <li>Troubleshooted and worked with various systems including ASI Safety, Ethernet, & OEM Equipment.</li>
+      <li>Commissioned several control areas start to finish, and ensured a timely turnover to the customer whilst supporting their efforts with various other sub teams and customers on site.</li>
     </ul>
 
-    <h3>Engineering Intern | New Standard Corporation (Spring 2021) & UKM Transit Products (Summer 2020)</h3>
+    <h3>Mechanical Engineering Intern | New Standard Corporation | Hellam, PA | Spring 2021</h3>
     <ul>
-      <li>Designed SolidWorks models and production drawings from legacy hand-drawings and customer STP files.</li>
-      <li>Created DXFs for laser cutting and ensured products met specifications.</li>
-      <li>Performed research testing hardware performance in customer parts.</li>
-      <li>Collaborated with engineering team to design manufacturable parts, including tolerances, finishes, and paint specs.</li>
-      <li>Fulfilled engineering change orders (ECO) to revise drawings and associated documents.</li>
+      <li>Converted customer STP Files to SolidWorks parts and assy’s to create prints, laser cut DXF’s, and communicate with the engineering team to facilitate the production of products within specification.</li>
+      <li>Performed, created & analyzed a research study to test the performance of hardware in our customers parts.</li>
+      <li>Worked with several different teams including quality, sales, and operations to assist in assembling the documentation to get customer approval for production parts (PPAP).</li>
+    </ul>
+
+    <h3>Manufacturing Engineering Intern | UKM Transit Products | Harleysville, PA | Summer 2020</h3>
+    <ul>
+      <li>Designed SolidWorks models and production level drawings for several reverse engineering projects using outdated customer hand drawings.</li>
+      <li>Collaborated with the engineering team to design parts within our capabilities for manufacturing and met customer specified tolerancing, this included defining tolerances, surface finishes, and paint specs.</li>
+      <li>Communicated with members of the manufacturing process to help design products to customer spec.</li>
+      <li>Fulfilled engineering change orders (ECO) to revise drawings and associated BOM/assembly documents.</li>
     </ul>
 
     <h2>Education</h2>
@@ -91,5 +99,3 @@
   </div>
 </body>
 </html>
-
-
