--- a/experience/index.html
+++ b/experience/index.html
@@ -47,16 +47,16 @@
   <div class="container">
     <h1>Experience</h1>
 
-    <p>Exceptional problem solver with a proven track record of resolving critical issues at some of the world’s largest automated material handling facilities, including over 40 Amazon sites. Skilled in diagnosing and resolving controls, networking, and mechanical issues for high impact events. Experienced in material handling system optimization, PLC based controls and commissioning support. Adept at collaborating with cross functional teams to deliver measurable throughput gains, reduced downtime, and long term system improvements.</p>
+    <p>Exceptional problem solver and engineer with a proven record of improving performance in large-scale manufacturing and fulfillment systems. Experienced in controls design, system optimization, and commissioning of advanced automation equipment. Skilled in diagnosing high impact issues across PLCs, industrial networks, and integrated electromechanical systems to increase throughput, reliability, and efficiency</p>
 
     <h2>Engineering Work Experience</h2>
 
     <h3>Automation & Controls Engineer | Multi-Dimensional Integration (MDI) | August 2022 – Present</h3>
     <ul>
-      <li>Led Amazon fulfillment center optimization program on behalf of a global material handling OEM, improving throughput, lowering recirculation, reducing jams, increasing MHE uptime across 40+ Amazon sites nationwide.</li>
+      <li>Led Amazon fulfillment center optimization initiatives on behalf of a global automation OEM, improving throughput, reducing jams, and increasing uptime across 40+ facilities nationwide</li>
       <li>Drove performance gains across 10+ Amazon FCs, including a project that achieved 36.5% jam reduction and 43.1% DPMO decrease while increasing building volume by 26.8%, through PLC ladder logic optimization.</li>
       <li>Identified and implemented 700+ corrective actions at an Amazon FC, with 400+ integrated into future Amazon site designs to prevent repeat issues, which helped standardize best practices across the network.</li>
-      <li>Worked directly with Amazon OE and RME teams to rapidly diagnose and resolve critical issues using Allen Bradley PLC (Studio 5000), Ethernet/IP, Profibus, and other industrial networks; leveraged a strong understanding of ladder logic to create on the spot solutions in high pressure environments.</li>
+      <li>Collaborated with engineering, maintenance, and operations stakeholders to resolve high-impact production issues under tight deadlines, ensuring minimal downtime across multiple facilities.</li>
       <li>Supported commissioning through go live and post launch validation at 8+ Amazon FCs, leading on site efforts to validate and ensure a smooth transition to Amazon Operations.</li>
       <li>Coordinated peak season readiness efforts, partnering with engineering, operations, and Amazon teams to drive corrective actions and sustain peak MHE performance.</li>
       <li>Ensured all implemented solutions maintained compliance with Amazon’s safety standards and specifications.</li>
