--- a/about/index.html
+++ b/about/index.html
@@ -64,8 +64,8 @@
     <section class="section" aria-labelledby="values">
       <h2 id="values">What drives me</h2>
       <p>
-        Curiosity, systems thinking, efficiency, impact, and collaboration — values that guide how I approach both work and life. 
-        I am interested in automation, large-scale problem solving, process improvement, and manufacturing efficiency.
+        Curiosity, systems thinking, efficiency, impact, and collaboration values that guide how I approach both work and life. 
+        I am interested in automation, AI, large-scale problem solving, process improvement, and manufacturing efficiency.
       </p>
     </section>
 
@@ -87,9 +87,9 @@
     <section class="section" aria-labelledby="personal">
       <h2 id="personal">Outside of work</h2>
       <p>
-        Outside of work, I focus on maintaining my health through running, lifting, and cycling. 
-        I enjoy traveling across the world with my girlfriend, Lauren, and exploring new cultures and places. 
-        I also spend a lot of time researching investments — from the stock market to real estate — 
+        Outside of work I focus on maintaining my health through running, lifting, and cycling. 
+        I enjoy traveling across the world with my girlfriend, Lauren, and exploring cities and places. 
+        I also spend a lot of time researching investments from the stock market to real estate
         always looking for new ways to learn and grow.
       </p>
     </section>
@@ -105,11 +105,6 @@
       <p>
         📧 <a href="mailto:justinsmyth423@gmail.com">justinsmyth423@gmail.com</a><br>
         📞 six-one-zero-seven-seven-two-zero-nine-four-eight
-      </p>
-      <p class="inline-list">
-        <span><a href="/resume.pdf">Resume</a></span>
-        <span><a href="https://github.com/your-username" target="_blank" rel="noopener">GitHub</a></span>
-        <span><a href="https://www.linkedin.com/in/your-handle" target="_blank" rel="noopener">LinkedIn</a></span>
       </p>
     </section>
 
