--- a/education/index.html
+++ b/education/index.html
@@ -1,1 +1,131 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Education</title>
+  <style>
+    body {
+      background-color: white;
+      color: black;
+      font-family: "Lucida Console", Monaco, monospace;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      padding: 40px 20px;
+    }
+    .container {
+      max-width: 1000px;
+      width: 100%;
+      line-height: 1.5em;
+    }
+    h1, h2, h3 {
+      margin-top: 1.2em;
+      margin-bottom: 0.6em;
+    }
+    h1 { font-size: 2em; text-align: center; }
+    h2 { font-size: 1.5em; }
+    h3 { font-size: 1.2em; }
+    p { margin: 0.6em 0; }
+    a { color: black; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .back {
+      display: block;
+      margin-top: 40px;
+      text-align: center;
+    }
+    .edu-card {
+      display: grid;
+      grid-template-columns: 80px 1fr;
+      gap: 16px;
+      align-items: center;
+      border: 1px solid #000;
+      padding: 16px;
+    }
+    .logo {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+    }
+    .meta {
+      margin-top: 4px;
+      opacity: 0.9;
+    }
+    .divider {
+      height: 1px;
+      background: #000;
+      margin: 20px 0;
+    }
+    /* Coursework as two columns on wider screens */
+    .course-list {
+      column-count: 1;
+      column-gap: 24px;
+      margin-left: 20px;
+    }
+    .course-list li {
+      break-inside: avoid;
+      margin: 4px 0;
+    }
+    @media (min-width: 700px) {
+      .course-list { column-count: 2; }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Education</h1>
+
+    <!-- Degree block with YCP logo -->
+    <section aria-labelledby="degree">
+      <div class="edu-card">
+        <!-- Replace the src below with your actual logo path -->
+        <img class="logo" src="/assets/img/ycp-logo.png" alt="York College of Pennsylvania logo">
+        <div>
+          <h2 id="degree">Bachelor of Science — Mechanical Engineering</h2>
+          <p><strong>York College of Pennsylvania</strong></p>
+          <p class="meta">Aug 2018 – Aug 2022 • York, PA</p>
+        </div>
+      </div>
+    </section>
+
+    <div class="divider" aria-hidden="true"></div>
+
+    <!-- Focus / Summary -->
+    <section aria-labelledby="focus">
+      <h3 id="focus">Focus Areas</h3>
+      <p>Automation • Manufacturing Systems • System Dynamics • Design & Analysis</p>
+    </section>
+
+    <div class="divider" aria-hidden="true"></div>
+
+    <!-- Coursework -->
+    <section aria-labelledby="coursework">
+      <h3 id="coursework">Coursework</h3>
+      <ul class="course-list">
+        <li>Heat Transfer</li>
+        <li>Dynamics</li>
+        <li>Machine Design</li>
+        <li>Fluid Mechanics</li>
+        <li>Dynamic Systems Modeling/Analysis</li>
+        <li>Thermodynamics</li>
+        <li>Strengths in Matl’</li>
+        <li>Mechatronics</li>
+        <li>Physics: Mechanics & Electricity and Magnetism</li>
+        <li>Formula SAE</li>
+      </ul>
+    </section>
+
+    <div class="divider" aria-hidden="true"></div>
+
+    <!-- Activities (optional; safe, generic) -->
+    <section aria-labelledby="activities">
+      <h3 id="activities">Projects & Activities</h3>
+      <p>Hands-on design and testing through labs and team-based projects, including Formula SAE participation and applied mechatronics work.</p>
+    </section>
+
+    <!-- Same exact back button -->
+    <a class="back" href="/">← Back to Home</a>
+  </div>
+</body>
+</html>
 
