--- a/education/index.html
+++ b/education/index.html
@@ -34,13 +34,14 @@
       margin-top: 40px;
       text-align: center;
     }
+
+
     .edu-card {
       display: grid;
       grid-template-columns: 80px 1fr;
       gap: 16px;
       align-items: center;
-      border: 1px solid #000;
-      padding: 16px;
+      padding: 10px 0;
     }
     .logo {
       width: 80px;
@@ -51,12 +52,14 @@
       margin-top: 4px;
       opacity: 0.9;
     }
+
+  
     .divider {
       height: 1px;
       background: #000;
-      margin: 20px 0;
+      opacity: 0.8;
+      margin: 24px 0;
     }
-    /* Coursework as two columns on wider screens */
     .course-list {
       column-count: 1;
       column-gap: 24px;
@@ -74,14 +77,12 @@
 <body>
   <div class="container">
     <h1>Education</h1>
-
-    <!-- Degree block with YCP logo -->
     <section aria-labelledby="degree">
       <div class="edu-card">
-        <!-- Replace the src below with your actual logo path -->
-        <img class="logo" src="/assets/img/ycp-logo.png" alt="York College of Pennsylvania logo">
+        <!-- Replace src below with your actual logo path -->
+        <img class="logo" src="/assets/img/YCP_logo.png" alt="York College of Pennsylvania logo">
         <div>
-          <h2 id="degree">Bachelor of Science — Mechanical Engineering</h2>
+          <h2 id="degree">Bachelor of Science - Mechanical Engineering</h2>
           <p><strong>York College of Pennsylvania</strong></p>
           <p class="meta">Aug 2018 – Aug 2022 • York, PA</p>
         </div>
@@ -89,16 +90,6 @@
     </section>
 
     <div class="divider" aria-hidden="true"></div>
-
-    <!-- Focus / Summary -->
-    <section aria-labelledby="focus">
-      <h3 id="focus">Focus Areas</h3>
-      <p>Automation • Manufacturing Systems • System Dynamics • Design & Analysis</p>
-    </section>
-
-    <div class="divider" aria-hidden="true"></div>
-
-    <!-- Coursework -->
     <section aria-labelledby="coursework">
       <h3 id="coursework">Coursework</h3>
       <ul class="course-list">
@@ -108,24 +99,14 @@
         <li>Fluid Mechanics</li>
         <li>Dynamic Systems Modeling/Analysis</li>
         <li>Thermodynamics</li>
-        <li>Strengths in Matl’</li>
+        <li>Strengths in Materials</li>
         <li>Mechatronics</li>
         <li>Physics: Mechanics & Electricity and Magnetism</li>
         <li>Formula SAE</li>
       </ul>
     </section>
-
     <div class="divider" aria-hidden="true"></div>
-
-    <!-- Activities (optional; safe, generic) -->
-    <section aria-labelledby="activities">
-      <h3 id="activities">Projects & Activities</h3>
-      <p>Hands-on design and testing through labs and team-based projects, including Formula SAE participation and applied mechatronics work.</p>
-    </section>
-
-    <!-- Same exact back button -->
     <a class="back" href="/">← Back to Home</a>
   </div>
 </body>
 </html>
-
