--- a/education/index.html
+++ b/education/index.html
@@ -44,7 +44,7 @@
       padding: 10px 0;
     }
     .logo {
-      width: 80px;
+      width: auto;
       height: 80px;
       object-fit: contain;
     }
