--- a/education/index.html
+++ b/education/index.html
@@ -44,10 +44,12 @@
       padding: 10px 0;
     }
     .logo {
-      width: auto;
-      height: 80px;
-      object-fit: contain;
-    }
+  width: auto;
+  height: auto;
+  max-width: 120px;   
+  max-height: 120px;
+  object-fit: contain;
+}
     .meta {
       margin-top: 4px;
       opacity: 0.9;
