--- a/education/index.html
+++ b/education/index.html
@@ -82,7 +82,7 @@
     <section aria-labelledby="degree">
       <div class="edu-card">
         <!-- Replace src below with your actual logo path -->
-        <img class="logo" src="assets/img/YCP_Logo.png" alt="York College of Pennsylvania logo">
+        <img class="logo" src="assets/img/YCP_Logo_small.png" alt="York College of Pennsylvania logo">
         <div>
           <h2 id="degree">Bachelor of Science - Mechanical Engineering</h2>
           <p><strong>York College of Pennsylvania</strong></p>
