--- a/education/index.html
+++ b/education/index.html
@@ -33,7 +33,7 @@
 
     h2 {
       font-size: 1.5em;
-      text-align: center;
+      margin: 0;
     }
 
     h3 {
@@ -41,8 +41,7 @@
     }
 
     p {
-      margin: 0.6em 0;
-      text-align: center;
+      margin: 0.4em 0;
     }
 
     a {
@@ -67,17 +66,22 @@
       margin: 24px 0;
     }
 
+    /* Left-aligned logo + text grid */
+    .edu-card {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+
     .logo {
-      display: block;
-      margin: 0 auto 8px auto;
-      max-width: 140px;
+      width: 100px;
       height: auto;
       object-fit: contain;
+      flex-shrink: 0;
     }
 
     .meta {
       opacity: 0.9;
-      text-align: center;
     }
 
     /* Coursework styling */
@@ -97,6 +101,13 @@
         column-count: 2;
       }
     }
+
+    @media (max-width: 600px) {
+      .edu-card {
+        flex-direction: column;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 <body>
@@ -104,11 +115,13 @@
     <h1>Education</h1>
 
     <!-- Degree block -->
-    <section aria-labelledby="degree" style="text-align:center; margin-top:8px;">
+    <section aria-labelledby="degree" class="edu-card">
       <img class="logo" src="/assets/img/YCP_Logo_small.png" alt="York College of Pennsylvania logo">
-      <h2 id="degree">Bachelor of Science — Mechanical Engineering</h2>
-      <p><strong>York College of Pennsylvania</strong></p>
-      <p class="meta">Aug 2018 – Aug 2022 • York, PA</p>
+      <div>
+        <h2 id="degree">Bachelor of Science — Mechanical Engineering</h2>
+        <p><strong>York College of Pennsylvania</strong></p>
+        <p class="meta">Aug 2018 – Aug 2022 • York, PA</p>
+      </div>
     </section>
 
     <div class="divider" aria-hidden="true"></div>
