--- a/education/index.html
+++ b/education/index.html
@@ -147,9 +147,9 @@
 
     <!-- Activities -->
     <section aria-labelledby="activities">
-      <h3 id="activities">Projects & Activities</h3>
+      <h3 id="activities">Capstone Project</h3>
       <p>
-        Hands-on design and testing through labs and team-based projects, including Formula SAE participation and applied mechatronics work.
+        As part of YCP Racing, for our Captstone I and II, I was integrated on the suspension team responsible for steering, anti roll bars, as well as assembling our teams Bill of materials. 
       </p>
     </section>
 
