--- a/about/index.html
+++ b/about/index.html
@@ -106,6 +106,9 @@
         📧 <a href="mailto:justinsmyth423@gmail.com">justinsmyth423@gmail.com</a><br>
         📞 six-one-zero-seven-seven-two-zero-nine-four-eight
       </p>
+        <p>
+        Webpage made in the USA by justin smyth. I used AI to help on this project. Everyone has access to these tools, but I chose to make a website from it 
+      </p>
     </section>
 
     <!-- Same exact back button -->
